--- a/.github/workflows/03-minhas-actions.yaml
+++ b/.github/workflows/03-minhas-actions.yaml
@@ -12,20 +12,10 @@ jobs:
             - name: Setup .NET Core SDK
               uses: actions/setup-dotnet@v4
               with:
-                dotnet-version: '8.0'
-
-            - name: Restore dependencies
-              run: dotnet restore Fiap.Web.SmartWasteManagement.sln
+                dotnet-version: '8.0'            
 
             - name: Build the project
-              run: dotnet build Fiap.Web.SmartWasteManagement.sln --configuration Release --no-restore
-
-            - name: Run tests
-              run: dotnet test Fiap.Web.SmartWasteManagement.sln --no-restore --verbosity normal
-
-            - name: Clean up
-              run: dotnet clean Fiap.Web.SmartWasteManagement.sln
-
+              run: dotnet build Fiap.Web.SmartWasteManagement.sln --configuration Release --no-restore    
 
             - name: Build Docker
               uses: docker/build-push-action@v6
@@ -35,7 +25,8 @@ jobs:
             - name: Executar Scripts
               run: |
                 git branch
-                dotnet --version                
+                dotnet --version   
+                dotnet clean Fiap.Web.SmartWasteManagement.sln             
 
 
             
