--- a/Fiap.Web.SmartWasteManagement.csproj
+++ b/Fiap.Web.SmartWasteManagement.csproj
@@ -23,8 +23,8 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
-		<PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.60" />
-		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.6.0" />
+		<PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.8" />
+		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
