--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -2,7 +2,8 @@ name: Continuous Integration
 on:
     pull_request:
         types: [opened, reopened]
-        branches: "feature/**"
+        branches: 
+          - main
 jobs:
     tests:
         runs-on: ubuntu-latest
