--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -17,13 +17,12 @@ jobs:
                 dotnet-version: '8.0'     
               
         -   name: Restore Dependencies
-            run: dotnet restore Fiap.Web.SmartWasteManagement.Tests.csproj
-
+            run: dotnet restore Fiap.Web.SmartWasteManagement.sln
 
         -   name: Build solution
             run: dotnet build Fiap.Web.SmartWasteManagement.sln --configuration Release --no-restore
 
         -   name: Run Tests
-            run: dotnet test ../Fiap.Web.SmartWasteManagement.Tests/Fiap.Web.SmartWasteManagement.Tests.csproj --no-restore --verbosity normal --logger "trx;LogFileName=test_results.trx"
+            run: dotnet test Fiap.Web.SmartWasteManagement.sln --no-restore --verbosity normal --logger "trx;LogFileName=test_results.trx"
 
 
