--- a/Fiap.Web.SmartWasteManagement/appsettings.json
+++ b/Fiap.Web.SmartWasteManagement/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=127.0.0.1:3306;Database=sys;User=root;Password=123456;"
+    "DatabaseConnection": "Server=bd-fiap-smartwaste-dev.mysql.database.azure.com;Port=3306;Database=dbfiap;User=rm550692;Password=;"
   },
   "AllowedHosts": "*"
 }
