--- a/.github/workflows/continuous_delivery.yaml
+++ b/.github/workflows/continuous_delivery.yaml
@@ -28,7 +28,7 @@ jobs:
         -   name: Login to Docker Hub
             uses: docker/login-action@v3
             with:
-                registry: https://hub.docker.com/
+                registry: https://index.docker.io/v1/
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -48,4 +48,4 @@ jobs:
             with:
               app-name: ${{ env.AZURE_WEBAPP_NAME }}
               publish-profile: ${{ secrets.AZURE_PROFILE }}
-              images: 'hub.docker.com/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest'
+              images: 'index.docker.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest'
