--- a/.github/workflows/continuous_delivery.yaml
+++ b/.github/workflows/continuous_delivery.yaml
@@ -37,7 +37,7 @@ jobs:
             with: 
                 push: true
                 tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-                file: ./Dockerfile
+                file: ./Fiap.Web.SmartWasteManagement/Dockerfile
     deploy:
         runs-on: ubuntu-latest
         needs: build
